--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
     "require": {
 		"smalot/pdfparser": "*",
 		"itbz/fpdi": "*",
-		"thiagoalessio/tesseract_ocr": "*"
+		"thiagoalessio/tesseract_ocr": "*",
+        "phpunit/phpunit": "^5.7",
+        "phpunit/php-code-coverage": "^4.0"
     }
 }
