--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
 		"smalot/pdfparser": "*",
 		"itbz/fpdi": "*",
         "thiagoalessio/tesseract_ocr": "*",
-        "phpunit/phpunit": "^5.7",
+        "phpunit/phpunit": "5.5",
         "phpunit/php-code-coverage": "^4.0"
     }
 }
