--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,8 @@
         "thiagoalessio/tesseract_ocr": "*",
         "phpunit/phpunit": "5.5",
         "phpunit/php-code-coverage": "^4.0"
+    },
+    "autoload":{
+        "psr-4": {"":"/app"}
     }
 }
