--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,6 @@
         "phpunit/php-code-coverage": "^4.0"
     },
     "autoload":{
-        "psr-4": {"app\\":"app/"}
+        "psr-4": {"":""}
     }
 }
