--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
     "require": {
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
+        "guzzlehttp/promises": "^1.3",
+        "itbz/fpdi": "*",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "nesbot/carbon": "^1.22",
         "smalot/pdfparser": "*",
-        "itbz/fpdi": "*",
         "thiagoalessio/tesseract_ocr": "*"
     },
     "require-dev": {
