--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/tinker": "~1.0",
         "nesbot/carbon": "^1.22",
         "smalot/pdfparser": "*",
-        "thiagoalessio/tesseract_ocr": "*"
+        "thiagoalessio/tesseract_ocr": "*",
+        "tymon/jwt-auth": "^0.5.12"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
