--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "barryvdh/laravel-cors": "^0.10.0",
         "fideloper/proxy": "~3.3",
         "guzzlehttp/promises": "^1.3",
         "itbz/fpdi": "*",
